<resources>
    <string name="app_name">Smi Nota Spese</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="kmh">Km/h</string>
    <string name="settings">Impostazioni</string>
    <string name="work">Lavoro</string>
    <string name="all">Tutto</string>
    <string name="personali">Personali</string>
    <string name="km">Km</string>
    <string name="tempo">Tempo</string>
    <string name="v_max">V.max</string>
    <string name="v_media">V.media</string>
    <string name="empty"></string>
    <string name="dft_time">01:00:00</string>
    <string name="dft_tot_km">1.234,56</string>
    <string name="dft_vel">123,4</string>
    <string name="dft_temp">13,4°C</string>
    <string name="dft_hum">50%</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Generali</string>

    <string name="pref_general_server_ip">IP Server</string>
    <string name="pref_general_server_ip_dft">paocos.ddns.net</string>
    <string name="pref_general_server_ip_dlg">Impostare indirizzo server di collegamento</string>
    <string name="pref_general_server_port">Porta Server</string>
    <string name="pref_general_server_port_dft">8080</string>
    <string name="pref_general_server_port_dlg">Impostare la porta di collegamento al server</string>
    <string name="pref_general_server_path">Percorso Server</string>
    <string name="pref_general_server_path_dft">SmiPaoCos/restservices/paocos</string>
    <string name="pref_general_server_path_dlg">Impostare percorso server di collegamento</string>
    <string name="pref_general_cod_dip">Codice dipendente</string>
    <string name="pref_general_cod_dip_dft">0069</string>
    <string name="pref_general_cod_dip_dlg">Impostare codice dipendente rapportini</string>

    <!-- Example settings for GPS -->
    <string name="pref_header_gps">Gps</string>

    <string name="pref_gps_active">Attivo</string>
    <string name="pref_gps_active_dft">false</string>

    <string name="pref_gps_pinc">% Incremento KM</string>
    <string name="pref_gps_ping_dft">10</string>
    <string name="pref_gps_ping_dlg">Inserire la percentuale di incremento per i KM</string>

    <string name="pref_gps_interval">Intervallo lettura GPS</string>
    <string name="pref_gps_interval_dft">500</string>
    <string name="pref_gps_interval_dlg">Inserire l\'intervallo di lettura del GPS fra 500 e 5000 msec</string>

    <string name="pref_gps_precision">Precisione minima per calcolo</string>
    <string name="pref_gps_precision_dft">50</string>
    <string name="pref_gps_precision_dlg">Impostare a quale precisione minima si deve cominciare a calcolare i dati di viaggio da 4 a 100</string>

    <!-- Example settings for TEMP -->
    <string name="pref_header_temp">Termostato</string>

    <string name="pref_temp_active">Attivo</string>
    <string name="pref_temp_active_dft">false</string>

    <string name="pref_temp_soglia">Soglia Temperatura</string>
    <string name="pref_temp_soglia_dft">19</string>
    <string name="pref_temp_soglia_dlg">Inserire la soglia di temperatura per il termostato</string>

    <!-- Example settings for LUNCH -->
    <string name="pref_header_lunch">Pranzo</string>

    <string name="pref_lunch_quota">Rimborso pranzo</string>
    <string name="pref_lunch_quota_dft">12</string>
    <string name="pref_lunch_quota_dlg">Inserire l\'importo di rimborso per il pranzo fuori sede</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>2 minutes (debug)</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>2</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="rec">R</string>
    <string name="stop">S</string>
    <string name="title_activity_lunch">LunchActivity</string>
    <string name="Data">Data</string>
    <string name="sede">Sede</string>
    <string name="fuori">Fuori</string>
    <string name="importo">Importo</string>
    <string name="conferma">Conferma</string>
    <string name="background_gps">background gps</string>
    <string name="homework">Casa o Lavoro</string>
    <string name="background_temp">back temp</string>
    <string name="temp">Temperatura</string>
    <string name="humidity">Umidità</string>
    <string name="tempdir">Alza o Abbassa</string>
    <string name="background_orario">back orario</string>
    <string name="mattino">Mattino</string>
    <string name="pomeriggio">Pomeriggio</string>
    <string name="da">Da</string>
    <string name="a">A</string>
    <string name="background_pranzo">back pranzo</string>
    <string name="wia">Via dei gatti</string>
    <string name="background_riep">back riep</string>
    <string name="oggi">Oggi</string>
    <string name="mese">Mese</string>
    <string name="mesep">Mese Prec.</string>
    <string name="anno">Anno</string>
    <string name="home">Personali</string>
    <string name="altro">Altro</string>
    <string name="gglav">GG Lav.</string>
    <string name="pastisede">Pasti Sede</string>
    <string name="pastifuori">Pasti Fuori</string>
    <string name="rimborsato">Imp. Rimborsato</string>
    <string name="delta">Delta</string>
    <string name="bypaocos">by PaoCos</string>

</resources>
