<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="0dp"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/gpscv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gpsback"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/gpsrellay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <android.support.constraint.Guideline
                android:id="@+id/gpsguidah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <android.support.constraint.Guideline
                android:id="@+id/gpsguidav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/gpsback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/background_gps"
                android:src="@drawable/gps_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TableLayout
                android:id="@+id/gpstable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/gpsback"
                android:layout_centerVertical="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.145">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/gps_lbl_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/km"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/gps_lbl_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/tempo"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/gps_lbl_vmedia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/v_media"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/gps_txt_km"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/km"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/alti_size"
                        tools:text="0.000,0" />

                    <TextView
                        android:id="@+id/gps_txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/tempo"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/alti_size"
                        tools:text="00.00.00" />

                    <TextView
                        android:id="@+id/gps_txt_vmedia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:text="@string/v_media"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/alti_size"
                        tools:text="000" />


                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/gps_lbl_whereiam"
                android:layout_width="351dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="3dip"
                android:text="@string/wia"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpstable" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>